app/assets/main.scss
// ideally we wouldn't use a relative import here
// didn't want to fight the config at the time
$govuk-new-organisation-colours: true;
$govuk-assets-path: "/static/assets/";

@import "../../node_modules/govuk-frontend/dist/govuk";

.app-\!-no-wrap {
    white-space: nowrap;
}

// this class will only be applied if GOV.UK Frontend Jinja has set the `.js-enabled` class meaning
// it could execute JavaScript
.js-enabled .app-js-hidden {
    display: none;
}

.app-left-nav__item > a {
    display: block;
    padding: 7px 0;
    width: 100%;
}

// Makes the content of this div display behind the other elements on the page, like a watermark
.app-watermark-container {
    min-height: 300px;
    background-repeat: repeat;
    background-size: 150px 150px;
    background-image: var(--watermark-image);
    --watermark-image: url('/static/assets/images/watermark-developer.svg');
}

// Needed to make the watermark above visible
body.govuk-template__body:has(div.app-body__watermark) {
    background-color: rgba(255, 255, 255, 0.5);
}

// Needed to make the watermark above visible
.govuk-template:has(div.app-body__watermark) {
    background-color: rgba(255, 255, 255, 0.5);
}


.app-move-up-down-table__actions {
    width: 50%
}

.app-move-up-down-table__action--disabled {
    color: govuk-colour("mid-grey");
}

.app-move-up-down-table__row:first-child {
    border-top: 1px solid govuk-colour("mid-grey");
}

.app-link-button {
    @include govuk-font(19);
    color: $govuk-link-colour;
    background: none;
    border: 0;
    padding: 0;
    text-decoration: underline;

    &:hover {
        cursor: pointer;
        text-decoration: none;
    }
}

.app-metadata {
    @include govuk-font(19);
}

.app-metadata__key {
    @include govuk-typography-weight-bold(5);

    display: inline;
}

.app-metadata__value {
    @include govuk-responsive-margin(1, "left");

    display: inline-block;
}

